--- a/kvarko-cli/Cargo.toml
+++ b/kvarko-cli/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "3.2", features = [ "derive" ] }
+kvarko-engine = { path = "../kvarko-engine" }
 kvarko-model = { path = "../kvarko-model" }
