--- a/kvarko-model/Cargo.toml
+++ b/kvarko-model/Cargo.toml
@@ -10,3 +10,4 @@ doctest = false
 
 [dependencies]
 kvarko-proc-macro = { path = "../kvarko-proc-macro" }
+serde = { version = "1.0", features = [ "derive" ] }
