--- a/kvarko-model/Cargo.toml
+++ b/kvarko-model/Cargo.toml
@@ -10,4 +10,5 @@ doctest = false
 
 [dependencies]
 kvarko-proc-macro = { path = "../kvarko-proc-macro" }
+rand = "0.8"
 serde = { version = "1.0", features = [ "derive" ] }
