--- a/kvarko-engine/Cargo.toml
+++ b/kvarko-engine/Cargo.toml
@@ -9,3 +9,7 @@ edition = "2021"
 bincode = "1.3"
 kvarko-model = { path = "../kvarko-model" }
 serde = { version = "1.0", features = [ "derive" ] }
+
+[dev-dependencies]
+kernal = "0.2"
+rstest = "0.18"
