--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,11 @@ members = [
 ]
 resolver = "2"
 
+[profile.bench]
+opt-level = 3
+lto = true
+codegen-units = 1
+
 [profile.release]
 opt-level = 3
 lto = true
