check benches in CI

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -28,5 +28,7 @@ jobs:
       run: cargo build --verbose
     - name: Tests
       run: cargo test --verbose
+    - name: Check Benches
+      run: cargo check --benches --verbose
     - name: Documentation
       run: cargo doc --verbose
